kubernetes/loja/deployment.yaml
apiVersion: extensions/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: loja
    version: v1
  name: loja-v1
  namespace: raptorslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loja
      version: v1
  template:
    metadata:
      labels:
        app: loja
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8090"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: loja:1.0.0
          name: loja
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
          ports:
            - containerPort: 8090
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10
