kubernetes/loja/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: loja-gateway
  namespace: raptorslog
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loja-gateway
  namespace: raptorslog
spec:
  hosts:
    - "*"
  gateways:
    - loja-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: loja
            port:
              number: 80
